--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 .containerImg1 {
     width: 3.5%;
     border-radius: 50%;
@@ -22,4 +30,35 @@ button:nth-last-child(1) {
    padding: 5px;
    background-color: #e6e2e1;
    border-radius: 50%;
+}
+
+.cardImg {
+    position: relative;
+    border-top: 1px solid rgb(162, 159, 159);
+
+}
+.cardImg img {
+    width: 30px;
+    border-radius: 50%;
+}
+
+.cardImg img:last-of-type {
+    width: 15px;
+    border-radius: 0%;
+    position: absolute;
+    right: 2px;
+}
+
+.cardImg p {
+    font-size: 12px;
+
+    
+}
+.containerFooter {
+    max-width: max-content;
+    margin: 0 auto;
+    
+}
+hr {
+    width: 27em;
 }
